Footer + Sezione immagini

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,7 +1,10 @@
 // Colori di sfondo
 $primaryFooter: #192735;
+$mattRed: #D74D52;
 // Fine colori di sfondo
 
 // Testo
 $primaryText: #192836;
+$footerText: #A3B5CA;
+$smallText: 76%;
 // Fine testo
